--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,6 @@ requests = "^2.31.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+manage = "book_management.manage:main"
